# routes/meal.js
@@ -27,4 +27,108 @@ router.get(`/`,async (req, res) => {
 })
 
 
+router.get('/:id', async (req, res) => {
+
+    try{
+
+        const meal = await Meal.findById(req.params.id)
+
+        if(!meal){
+            return res.status(404).send('user not found')
+        }
+
+        return res.send(meal)
+
+    }catch(e){
+
+        console.log(e)
+
+    }
+
+})
+
+
+router.post('/', async (req, res) => {
+
+
+    try{
+
+        let meal = new Meal({
+            title: req.body.title,
+            description: req.body.description,
+            price: req.body.price
+        })
+
+        await meal.save()
+
+        return res.send(meal)
+
+
+    }catch(e){
+
+        console.log(e)
+
+    }
+
+})
+
+
+
+router.put('/:id', async (req, res) =>{
+
+
+    try{
+
+        const meal = await Meal.findById(req.params.id)
+
+        if(!meal){
+
+            return res.status(404).send('user not found')
+        }
+
+        const mealFind = await Meal.findByIdAndUpdate(
+            req.params.id,
+            {
+                title: req.body.title,
+                description: req.body.description,
+                price: req.body.price
+            },
+            { new: true }
+        )
+
+        res.send(mealFind)
+
+
+    }catch(e){
+
+        console.log(e)
+
+    }
+
+})
+
+
+
+router.delete('/:id', async (req, res) =>{
+
+
+    Meal.findByIdAndRemove(
+
+        Meal.findByIdAndRemove(req.params.id).then(meal => {
+            if(meal){
+                return res.status(200).json({success: true, message: 'meal deleted !'})
+            }else{
+                return res.status(404).json({success: false, message: 'meal not found'})
+            }
+        }).catch(err => {
+            return res.status(400).json({success: false, error: err})
+        })
+    )
+
+})
+
+
+
+
+
 export default router
